--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.cloudbeers</groupId>
   <artifactId>maven-continuous</artifactId>
-  <version>1.x-SNAPSHOT</version>
+  <version>1.8</version>
   <packaging>war</packaging>
 
   <name>maven-continuous Maven Webapp</name>
@@ -14,7 +13,7 @@
     <connection>scm:git:https://github.com/JBContreras/maven-continuous.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/JBContreras/maven-continuous.git</developerConnection>
     <url>http://github.com/JBContreras/maven-continuous</url>
-    <tag>HEAD</tag>
+    <tag>maven-continuous-1.8</tag>
   </scm>
 
   <properties>
