--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.github.cloudbeers</groupId>
   <artifactId>maven-continuous</artifactId>
-  <version>1.8</version>
+  <version>1.x-SNAPSHOT</version>
   <packaging>war</packaging>
 
   <name>maven-continuous Maven Webapp</name>
@@ -13,7 +13,7 @@
     <connection>scm:git:https://github.com/JBContreras/maven-continuous.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/JBContreras/maven-continuous.git</developerConnection>
     <url>http://github.com/JBContreras/maven-continuous</url>
-    <tag>maven-continuous-1.8</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
